Replacing 'OpenMoko' with 'Openmoko'

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -17,7 +17,7 @@ We would love to hear from you.
 
 === Q: When and where can I buy a [[Neo 1973]]? ===
 
-A: The OpenMoko Neo 1973 is now sold out (11 Feb 2008). You should get the better [[Neo FreeRunner]] instead!
+A: The Openmoko Neo 1973 is now sold out (11 Feb 2008). You should get the better [[Neo FreeRunner]] instead!
 
 === Q: Where can I buy a [[Neo FreeRunner]]? ===
 
@@ -116,7 +116,7 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 
 
 === Q: Can the software do/connect to/... ===
-A: Reviews of the latest "bleeding edge" daily builds of the OpenMoko software stack can be seen [[Snapshot_review|here]]
+A: Reviews of the latest "bleeding edge" daily builds of the Openmoko software stack can be seen [[Snapshot_review|here]]
 
 A: At the moment, the answer to many other questions is "no". The phone is at the moment a small linux box with a touchscreen, a working dialer and some prototype apps.  Most do not function in any way that would be suitable for end-users.  If you want to add a feature or application request, then look over the existing [[Applications]] and either add one, or add a feature request to the applications page.
 
@@ -126,9 +126,9 @@ It is possible to make and receive calls in some software revisions, this freque
 
 ====What software can be installed on the phone?====
 
-=== Q: Is there description and list of OpenMoko software? ===
+=== Q: Is there description and list of Openmoko software? ===
 
-A: See [[OpenMoko]] and [[OpenmokoFramework]]
+A: See [[Openmoko]] and [[OpenmokoFramework]]
 
 === Q: Is it completely free software/open source? ===
 
@@ -138,7 +138,7 @@ There are legal reasons why it is not possible to provide Open Source software f
 
 Otherwise it is completely free software. See [[MokoMakefile]] and [[Development resources]].
 
-=== Q: How do I install and manage software on OpenMoko? ===
+=== Q: How do I install and manage software on Openmoko? ===
 
 A: ipkg: http://handhelds.org/moin/moin.cgi/Ipkg
 
@@ -146,19 +146,19 @@ A: ipkg: http://handhelds.org/moin/moin.cgi/Ipkg
 
 A: See [[Toolchain]].
 
-=== Q: Is there an emulator available for OpenMoko? ===
+=== Q: Is there an emulator available for Openmoko? ===
 
-For a lot of testing and development work, you don't actually need emulation as you can run OpenMoko on a normal PC too. The emulators also aren't 100% accurate. That being said, there are several emulation options as described in the following.
+For a lot of testing and development work, you don't actually need emulation as you can run Openmoko on a normal PC too. The emulators also aren't 100% accurate. That being said, there are several emulation options as described in the following.
 
 ====QEMU====
-QEMU can now emulate the Neo1973 device. The [[MokoMakefile]] has support for automatically building, flashing, and running [[OpenMoko under QEMU|the Neo1973 emulator]].
+QEMU can now emulate the Neo1973 device. The [[MokoMakefile]] has support for automatically building, flashing, and running [[Openmoko under QEMU|the Neo1973 emulator]].
 
 *Ubuntu users can follow the instructions in [[Automatic_emulation_in_Ubuntu]]
 
 *Users of other Linux distributions can try the following:
 :"make qemu” will build qemu-neo1973, download the latest official openmoko images, flash the images into the virtual NAND flash, and run the emulator.
 
-See [[Qemu]] for more advanced information on running OpenMoko in Qemu.
+See [[Qemu]] for more advanced information on running Openmoko in Qemu.
 
 ====Xoo====
 Another is [http://projects.o-hand.com/xoo Xoo]. Koen says: "Xoo should be enough for most apps people will develop, since most don't need access to the gsm uart directly. If you're hardcore you could use qemu + xoo, but that still doesn't emulate all the hardware quirks (e.g. unaligned access)".
@@ -167,7 +167,7 @@ Update: Stefan Schmidt has resized the [[Neo1973]] Mock-up and written a small d
 
 It's not really useable at all, as you need a really high screen resolution to fit the whole picture on your screen. And of course the dpi are wrong. Even no buttons because I can't remember where they are at the case.
 
-http://www.datenfreihafen.org/~stefan/OpenMoko/neo1973-xoo-device.tar.bz2
+http://www.datenfreihafen.org/~stefan/Openmoko/neo1973-xoo-device.tar.bz2
 
 Start with 'xoo --device /path/to/neo1973.xml'
 
@@ -185,13 +185,13 @@ Or use Xephyr directly with locally compiled programs (e.g. matchbox svn + openm
  openmoko-footer &
  openmoko-taskmanager &
 
-=== Q: Where can I find some type of tutorial for a 'Hello, world' on OpenMoko? ===
+=== Q: Where can I find some type of tutorial for a 'Hello, world' on Openmoko? ===
 
 A: This should get you started:
 * [[Building_a_hello_world_application]]
 * http://www.gtk.org/documentation.html#Tutorials
 
-=== Q: Can PalmOS apps applications be ported to run on OpenMoko? ===
+=== Q: Can PalmOS apps applications be ported to run on Openmoko? ===
 
 A: Making legacy apps written for the "Garnet" OS (née "Palm OS") run on Linux
 is decidedly non-trivial.
@@ -200,7 +200,7 @@ PalmOS apps are in general very hard to simply 'port'. Particularly well-designe
 
 The ACCESS Linux Platform will include Garnet on Host (GHost), a PalmOS emulator that will support M6800 (68k) and ARM PalmOS applications. This part (GarnetVM and the .prc loader) will however be closed-source and likely under a restrictive license (fact confirmed by ACCESS Co. employees), making it rather unusable. In addition GarnetVM depends on Hiker and other packages.
 
-It is possible that POSE, an emulator that simulates a Palm device on a Linux host could be used to allow 68k based applications to run.  This emulator has been around a long time; one expects that it will also run on OpenMoko, but this has to be considered a short-term bandaid rather than a long-term solution.
+It is possible that POSE, an emulator that simulates a Palm device on a Linux host could be used to allow 68k based applications to run.  This emulator has been around a long time; one expects that it will also run on Openmoko, but this has to be considered a short-term bandaid rather than a long-term solution.
 
 The soon-to-be-released [http://www.palm.com/foleo/ Palm Foleo], which runs a Linux port developed by Palm Inc. independently of ALP, contains a PalmOS compatibility environment that runs PalmOS apps, supposedly all of them and supposedly seamlessly. Little is known about how it works but if it's not too kludgy it should run unmodified on any ARM linux. It is not known what license it will be distributed under.
 
@@ -209,21 +209,21 @@ Hopefully emulation will be necessary only for M68000 code (pre-PalmOS 5) while 
 === Q: Does it have Java? ===
 A: It will have eventually, if you help us to get it working. Some good places to keep track of would be [http://projects.openmoko.org/projects/java-pkg/ projects.openmoko.org] and [https://phoneme.dev.java.net/ PhoneME].
 
-Project [[https://wiki.evolvis.org/jalimo/index.php/Jalimo Jalimo]] is a project aiming to provide a Java stack on mobile devices. This project supports OpenMoko.
+Project [[https://wiki.evolvis.org/jalimo/index.php/Jalimo Jalimo]] is a project aiming to provide a Java stack on mobile devices. This project supports Openmoko.
 
 === Q: What are the relevant X11 details? ===
 
 A: See [http://lists.openmoko.org/pipermail/community/2007-January/001353.html xdpyinfo output].
 
-=== Q: Does OpenMoko run on any other hardware? ===
+=== Q: Does Openmoko run on any other hardware? ===
 
-You can run it on your [[How_to_run_OpenMoko_Apps_on_PC|PC]].  You may be able to run it on other [[OpenMoko-supported_hardware | mobile platforms]]
+You can run it on your [[How_to_run_Openmoko_Apps_on_PC|PC]].  You may be able to run it on other [[Openmoko-supported_hardware | mobile platforms]]
 
 
 
 === Q: Why do you not build on top of the Maemo platform instead? ===
 
-While I can't speak for the OpenMoko team, it's worth noting that maemo is fixed resolution only. That will, I've heard, change in the future, but it hasn't yet. Maemo's current layout is also optimized for wide screens, not tall narrow ones. Most third party maemo applications that are out there will need to be modified to work at different sizes. Finally, a number of the software components of the Nokia 770 and N800 are not open source. --gopi
+While I can't speak for the Openmoko team, it's worth noting that maemo is fixed resolution only. That will, I've heard, change in the future, but it hasn't yet. Maemo's current layout is also optimized for wide screens, not tall narrow ones. Most third party maemo applications that are out there will need to be modified to work at different sizes. Finally, a number of the software components of the Nokia 770 and N800 are not open source. --gopi
 
 To add up on that, according to Nokia, Maemo is designed to bring the "Desktop" experience to an Internet Tablet. A lot of Desktop paradigms just won't work on a phone. However, we really share a lot of the base-technology (gtk, dbus, eds, gconf, to name a few) with Maemo, so we are definitely not a reinvent-the-wheel team.
 
@@ -344,7 +344,7 @@ A: Yes
 
 === Q: What can we expect in future versions? ===
 
-A: A faster CPU, faster GSM (EDGE?) perhaps even powered USB port, USB2, wifi, and camera. No details have been released yet. More details of hardware upgrades should be available sometime in May. There will also be 5 more OpenMoko devices - some not phones in the traditional sense - announced by FIC in September.
+A: A faster CPU, faster GSM (EDGE?) perhaps even powered USB port, USB2, wifi, and camera. No details have been released yet. More details of hardware upgrades should be available sometime in May. There will also be 5 more Openmoko devices - some not phones in the traditional sense - announced by FIC in September.
 
 === Q: Are microSDHC-cards like this[1] supported? ===
 
@@ -364,20 +364,20 @@ A: Yes - see [http://gentoo-wiki.com/HOWTO_Configure_a_bluetooth_network_access_
 
 A: See [[Neo1973 compatible cellphone providers]]
 
-=== Q: Will OpenMoko "Just Work" with Mac OS X? ===
+=== Q: Will Openmoko "Just Work" with Mac OS X? ===
 
 A: There has been some discussion of this on the mailing list. There is motivation, and there are interested developers. 
 Not being a Mac OS X user, I don't know enough
 to summarize the discussion to answer this question. Can someone please fill in?
 
-A: For IP over USB cable connectivity, it is planned to improve/adapt the AJZaurusUSB driver, allowing ssh into the OpenMoko.
+A: For IP over USB cable connectivity, it is planned to improve/adapt the AJZaurusUSB driver, allowing ssh into the Openmoko.
 
 A: It is expected that (Bluetooth/UB) SyncML based interoperation for
 contacts and events can easily be achieved by a patch
 to the Apple iSync configuration tables.
 
 A: There is an open source implementation of Cocoa (GNUstep) that aims to run MacOS X compatible applications (sort of
-PPC/x86/ARM universal binaries) on OpenMoko devices: mySTEP.
+PPC/x86/ARM universal binaries) on Openmoko devices: mySTEP.
 
 ==Misc==
 
@@ -395,7 +395,7 @@ For example, to search for accelerometer:
 
  site:openmoko.org accelerometer
 
-If you only want to read the "official" mails from FIC people or from OpenMoko people:
+If you only want to read the "official" mails from FIC people or from Openmoko people:
 
  site:openmoko.org text "at fic.com.tw"
  site:openmoko.org text "at openmoko.org"
@@ -404,7 +404,7 @@ For example to search for "release date" from FIC people:
 
  site:openmoko.org "release date" "at fic.com.tw"
 
-Alternatively you can use the [http://www.google.com/coop/cse?cx=018430699993342716089%3Aszsaurhronw custom OpenMoko search engine] that is using [http://www.google.com/coop/ Google Co-op].
+Alternatively you can use the [http://www.google.com/coop/cse?cx=018430699993342716089%3Aszsaurhronw custom Openmoko search engine] that is using [http://www.google.com/coop/ Google Co-op].
 
 === Q: how many dead pixels may the LCM have before calling it defect? ===
 
