Replacing 'OpenMoko' with 'Openmoko'

--- a/FAQ%2Fde.mw
+++ b/FAQ%2Fde.mw
@@ -1,13 +1,13 @@
 == Einleitung == 
 
 === Q: Was ist Openmoko? Was sind Neo 1973 und Neo FreeRunner? ===
-A: [[OpenMoko]] ist eine Software Plattform - Der Versuch eine vollst&auml;ndig offene Softwaresuite f&uuml;r Handys zu erschaffen. 
-* Das [[FIC]] [[Neo 1973]] ist das erste Telefon, das OpenMoko unterstützt. Es ist primär für Softwareentwickler gedacht.
+A: [[Openmoko]] ist eine Software Plattform - Der Versuch eine vollst&auml;ndig offene Softwaresuite f&uuml;r Handys zu erschaffen. 
+* Das [[FIC]] [[Neo 1973]] ist das erste Telefon, das Openmoko unterstützt. Es ist primär für Softwareentwickler gedacht.
 * Das FIC [[Neo FreeRunner]] ist eine geplante verbesserte Version des Neo 1973. 
 
 === Q: Wo kann das Neo 1973 gekauft werden? ===
 
-A: Das Neo 1973 ist im [https://direct.openmoko.com/ OpenMoko Shop] nicht mehr erhältlich.
+A: Das Neo 1973 ist im [https://direct.openmoko.com/ Openmoko Shop] nicht mehr erhältlich.
 
 === Q: Ab wann kann das Neo FreeRunner gekauft werden? ===
 
@@ -70,11 +70,11 @@ Idealerweise zus&auml;tzlich:
 
 ==Software==
 
-=== Q: Gibt es eine Beschreibung und Liste der Software (OpenMoko)? ===
+=== Q: Gibt es eine Beschreibung und Liste der Software (Openmoko)? ===
 
-A: Siehe [[OpenMoko]]
+A: Siehe [[Openmoko]]
 
-=== Q: Wie kann ich mit OpenMoko Software installieren und verwalten? ===
+=== Q: Wie kann ich mit Openmoko Software installieren und verwalten? ===
 
 A: ipkg: http://handhelds.org/moin/moin.cgi/Ipkg
 
@@ -82,7 +82,7 @@ A: ipkg: http://handhelds.org/moin/moin.cgi/Ipkg
 
 A: Siehe [[Toolchain]].
 
-=== Q: Gibt es einen Emulator f&uuml;r OpenMoko? ===
+=== Q: Gibt es einen Emulator f&uuml;r Openmoko? ===
 
 Zitat der Originalseite:
 
@@ -92,7 +92,7 @@ Zitat der Originalseite:
 In etwa: wenn deine erste Frage lautet, ob es einen Emulatur gibt, dann wirst du wohl wahrscheinlich nie etwas daf&uuml;r entwickeln.
 
 ====QEMU====
-QEMU ist ein guter Einstiegspunkt, es sollte m&ouml;glich sein, alle OpenMoko-Programme laufen zu lassen. Einstieg: http://www.aurel32.net/info/debian_arm_qemu.php
+QEMU ist ein guter Einstiegspunkt, es sollte m&ouml;glich sein, alle Openmoko-Programme laufen zu lassen. Einstieg: http://www.aurel32.net/info/debian_arm_qemu.php
 
 [[User:Jebba|Jeff]] hat ein Image zum Testen erstellt, siehe auch [http://fabrice.bellard.free.fr/qemu/ qemu], wenn gew&uuml;nscht:
 ftp://ftp.blagblagblag.org/pub/BLAG/developers/jebba/openmoko/
@@ -111,7 +111,7 @@ Update: Stefan Schmidt hat die Mock-ups angepasst und eine kleine Beschreibung f
 
 It's not really useable at all, as you need a really high screen resolution to fit the whole picture on your screen. And of course the dpi are wrong. Even no buttons because I can't remember where they are at the case.
 
-http://www.datenfreihafen.org/~stefan/OpenMoko/neo1973-xoo-device.tar.bz2
+http://www.datenfreihafen.org/~stefan/Openmoko/neo1973-xoo-device.tar.bz2
 
 Start with 'xoo --device /path/to/neo1973.xml'
 Mehr Informationen gibt es [[Getting_Openmoko_working_on_host_with_Xoo|hier]].
@@ -128,17 +128,17 @@ Oder verwende Xephyr f&uuml;r lokal &uuml;bersetzte Programme (z.B. matchbox svn
  openmoko-footer &
  openmoko-taskmanager &
 
-=== Q: Wo finde ich ein Tutorial f&uuml;r ein 'Hello, world!' f&uuml;r OpenMoko? ===
+=== Q: Wo finde ich ein Tutorial f&uuml;r ein 'Hello, world!' f&uuml;r Openmoko? ===
 
 A: http://www.gtk.org/tutorial/
 
-=== Q: K&ouml;nnen PalmOS Anwendungen nach OpenMoko portiert werden? ===
+=== Q: K&ouml;nnen PalmOS Anwendungen nach Openmoko portiert werden? ===
 
 A: Das portieren von "Garnet" OS (oder "Palm OS")-Programmen nach Linux ist keine einfache Aufgabe. Ein Emulator hierf&uuml;r wird Teil der ACCESS Linux Platform.
 
 Der Aufbau von PalmOS unterscheidet sich stark von Linux: Es verwendet nicht immer den Ansatz "everything is a file"; der Speicher ist als "Suppe" von Eintr&auml;gen realisiert (das ist nur teilweise richtig, da eine Berechtigung zum L&ouml;schen von Dateien aus dem Flashspeicher ben&ouml;tigt wird, aber vom Standpunkt eines Entwicklers gesprochen, kommt es dem schon sehr nahe). Auch die grafische Oberfl&auml;che ist sehr unterschiedlich zu GTK. Fazit: Eine sehr gut programmierte Anwendung, welche sorgf&auml;ltig die Kernelalgorithmen von der Oberfl&auml;che und die Eingabe und Ausgabe trennt, kann durch ersetzen einiger Komponenten portiert werden. Eine Anwendung, welche nicht so strikt programmiert wurde, vermischt die Komponenten an einem bestimmten Punkt, so dass das Portieren letztendlich eine große Herausforderung wird.
 
-Die ACCESS Linux Platform enth&auml;lt POSE, einen Emulator, welcher ein PalmOS auf einem Linux Host simuliert. Dieser Emulator existiert seit einiger Zeit; es wird erwartet, dass er auch auf OpenMoko laufen kann. Dies ist aber eher eine kurzfristiges "Pflaster" als eine Langzeitl&ouml;sung.
+Die ACCESS Linux Platform enth&auml;lt POSE, einen Emulator, welcher ein PalmOS auf einem Linux Host simuliert. Dieser Emulator existiert seit einiger Zeit; es wird erwartet, dass er auch auf Openmoko laufen kann. Dies ist aber eher eine kurzfristiges "Pflaster" als eine Langzeitl&ouml;sung.
 
 === Q: Ist Java vorhanden? ===
 
@@ -148,9 +148,9 @@ A: Wahrscheinlich, wenn Du uns hilfst, es zum Laufen zu bekommen. Ein guter Ort 
 
 A: Siehe [http://lists.openmoko.org/pipermail/community/2007-January/001353.html xdpyinfo output].
 
-=== Q: Funktioniert OpenMoko auch auf anderer Hardware? ===
+=== Q: Funktioniert Openmoko auch auf anderer Hardware? ===
 
-A: Du kannst es auf deinem [[How_to_run_OpenMoko_Apps_on_PC|PC]] laufen lassen. Oder auch: [http://www.datenfreihafen.org/~stefan/weblog//archives/2007/02/#e2007-02-18T15_27_07.txt OpenEZX and HTC] und [http://dominion.kabel.utwente.nl/koen/cms/openmoko-running-on-an-ipaq iPaq hx4700].
+A: Du kannst es auf deinem [[How_to_run_Openmoko_Apps_on_PC|PC]] laufen lassen. Oder auch: [http://www.datenfreihafen.org/~stefan/weblog//archives/2007/02/#e2007-02-18T15_27_07.txt OpenEZX and HTC] und [http://dominion.kabel.utwente.nl/koen/cms/openmoko-running-on-an-ipaq iPaq hx4700].
 
 ==Neo1973 Hardware== 
 
@@ -262,9 +262,9 @@ A: Ja, siehe auch [http://gentoo-wiki.com/HOWTO_Configure_a_bluetooth_network_ac
 
 === Q: Mit welchen Providern kann sich das Neo1973 verbinden (GSM)? ===
 
-A: Siehe [[OpenMoko compatible cellphone providers]]
+A: Siehe [[Openmoko compatible cellphone providers]]
 
-=== Q: Wie vertr&auml;gt sich OpenMoko mit Mac OS X? ===
+=== Q: Wie vertr&auml;gt sich Openmoko mit Mac OS X? ===
 
 Siehe [[MacOS_X]] für den aktuellen Stand.
 
@@ -275,11 +275,11 @@ Zitat der englischen Seite, welchem ich mich anschlie&szlig;e:
 
 Not being a Mac OS X user, I don't know enough to summarize the discussion to answer this question. Can someone please fill in?
 
-A: F&uuml;r IP &uuml;ber USB: Es gibt Pl&auml;ne, den AJZaurusUSB Treiber anzupassen, um ssh Zugriff f&uuml;r OpenMoko zu erhalten.
+A: F&uuml;r IP &uuml;ber USB: Es gibt Pl&auml;ne, den AJZaurusUSB Treiber anzupassen, um ssh Zugriff f&uuml;r Openmoko zu erhalten.
 
 A: Durch das Patchen der "Apple iSync configuration tables" (SyncML) sollte es m&ouml;glich sein, Kontakte und Termine, beispielsweise &uuml;ber Bluetooth/USB, abzugleichen.
 
-A: Es gibt eine OpenSource Implementierung von Cocoa (GNUStep). Das Ziel ist MacOS X kompatible Anwendungen (universielle PPC/x86/ARM Anwendungen) auf OpenMoko Ger&auml;ten ausf&uuml;hrbar zu machen: mySTEP.
+A: Es gibt eine OpenSource Implementierung von Cocoa (GNUStep). Das Ziel ist MacOS X kompatible Anwendungen (universielle PPC/x86/ARM Anwendungen) auf Openmoko Ger&auml;ten ausf&uuml;hrbar zu machen: mySTEP.
 
 ==Misc==
 
@@ -297,7 +297,7 @@ Beispielsweise eine Suche nach "accelerometer":
 
     site:openmoko.org accelerometer
 
-Um die Suche auf "offizielle" Mails von FIC oder OpenMoko einzuschr&auml;nken:
+Um die Suche auf "offizielle" Mails von FIC oder Openmoko einzuschr&auml;nken:
 
     site:openmoko.org text "at fic.com.tw"
     site:openmoko.org text "at openmoko.org"
@@ -306,7 +306,7 @@ Eine Suche nach dem "release date" von FIC Mitarbeitern:
 
  site:openmoko.org "release date" "at fic.com.tw"
 
-Alternativ kann auch [http://www.google.com/coop/cse?cx=017507431580478583395%3Astsl7lhxzbc custom OpenMoko search engine] verwendet werden. Diese Suche basiert auf [http://www.google.com/coop/ Google Co-op].
+Alternativ kann auch [http://www.google.com/coop/cse?cx=017507431580478583395%3Astsl7lhxzbc custom Openmoko search engine] verwendet werden. Diese Suche basiert auf [http://www.google.com/coop/ Google Co-op].
 
 === Q: Warum gibt es Kabel auf dem "debug board", welche nicht verbunden sind? ===
 
