Replacing 'OpenMoko' with 'Openmoko'

--- a/FAQ%2Fzh_cn.mw
+++ b/FAQ%2Fzh_cn.mw
@@ -2,9 +2,9 @@ Questions and Answers that don't seem to fit elsewhere
 
 ==简介== 
 
-=== 问: OpenMoko和Neo1973是什么? ===
+=== 问: Openmoko和Neo1973是什么? ===
 
-答: [[OpenMoko]] 是一个软件开发平台，尝试建立世界上第一个完全开放的智能手机软件开发平台。[[FIC]] [[Neo1973]] 是第一个完全支持OpenMoko的手机.
+答: [[Openmoko]] 是一个软件开发平台，尝试建立世界上第一个完全开放的智能手机软件开发平台。[[FIC]] [[Neo1973]] 是第一个完全支持Openmoko的手机.
 
 === 问: 我什么时候可以买到一部Neo1973? ===
 
@@ -65,9 +65,9 @@ Ideally they also:
 
 ==软件==
 
-=== Q: 有 OpenMoko 软件的描述和列表吗？ ===
+=== Q: 有 Openmoko 软件的描述和列表吗？ ===
 
-A: 见 [[OpenMoko]]
+A: 见 [[Openmoko]]
 
 === Q: 我怎么在OPENMOKO平台上安装和管理软件？ ===
 
@@ -89,7 +89,7 @@ http://www.aurel32.net/info/debian_arm_qemu.php
 [[User:Jebba|Jeff]] put together an image you can test under [http://fabrice.bellard.free.fr/qemu/ qemu], if you so desire:
 ftp://ftp.blagblagblag.org/pub/BLAG/developers/jebba/openmoko/
 
-OpenMoko has longer term plans to port the FIC machines to QEMU. For now MACHINE="qemuarm" can be used.
+Openmoko has longer term plans to port the FIC machines to QEMU. For now MACHINE="qemuarm" can be used.
 
 ====Xoo====
 Another is [http://projects.o-hand.com/xoo Xoo]. Koen says: "Xoo should be enough for most apps people will develop, since most don't need access to the gsm uart directly. If you're hardcore you could use qemu + xoo, but that still doesn't emulate all the hardware quirks (e.g. unaligned access)".
@@ -98,7 +98,7 @@ Update: Stefan Schmidt has resized the [[Neo1973]] Mock-up and written a small d
 
 It's not really useable at all, as you need a really high screen resolution to fit the whole picture on your screen. And of course the dpi are wrong. Even no buttons because I can't remember where they are at the case.
 
-http://www.datenfreihafen.org/~stefan/OpenMoko/neo1973-xoo-device.tar.bz2
+http://www.datenfreihafen.org/~stefan/Openmoko/neo1973-xoo-device.tar.bz2
 
 Start with 'xoo --device /path/to/neo1973.xml'
 
@@ -114,12 +114,12 @@ Or use Xephyr directly with locally compiled programs (e.g. matchbox svn + openm
  openmoko-footer &
  openmoko-taskmanager &
 
-=== Q: Where can I find some type of tutorial for a 'Hello, world' on OpenMoko? ===
+=== Q: Where can I find some type of tutorial for a 'Hello, world' on Openmoko? ===
 
 A: This should get you started:
 http://www.gtk.org/tutorial/
 
-=== Q: Can PalmOS apps applications be ported to run on OpenMoko? ===
+=== Q: Can PalmOS apps applications be ported to run on Openmoko? ===
 
 A: Making legacy apps written for the "Garnet" OS (née "Palm OS") run on Linux
 is decidedly non-trivial. An emulator for this is going to be part of the
@@ -127,7 +127,7 @@ ACCESS Linux Platform.
 
 PalmOS uses a very different model from Linux:  it doesn't really have a concept of a file, ''per se''; instead, all memory is seen as a "soup" of records to access and manipulate (this isn't strictly true, as files had to be grafted on when removable flash was supported, but it's close enough, from a developer's standpoint).  Also, the GUI toolkit looks very, very different from GTK.  The result is that a very well-written, modular program that carefully separates its core algorithms from its user interface and data input and output can be ported by replacing those components.  A program written by a mere mortal programmer is likely to have all these components intertwined to a point that a port will be challenging to say the least.
 
-The ACCESS Linux Platform will include POSE, an emulator that simulates a Palm device on a Linux host.  This emulator has been around a long time; one expects that it will also run on OpenMoko, but this has to be considered a short-term bandaid rather than a long-term solution.
+The ACCESS Linux Platform will include POSE, an emulator that simulates a Palm device on a Linux host.  This emulator has been around a long time; one expects that it will also run on Openmoko, but this has to be considered a short-term bandaid rather than a long-term solution.
 
 === Q: 它有 Java 功能吗？ ===
 A: It will have eventually, if you help us to get it working. Some good places to keep track of would be [http://projects.openmoko.org/projects/java-pkg/ projects.openmoko.org] and [https://phoneme.dev.java.net/ PhoneME].
@@ -136,9 +136,9 @@ A: It will have eventually, if you help us to get it working. Some good places t
 
 A: See [http://lists.openmoko.org/pipermail/community/2007-January/001353.html xdpyinfo output].
 
-=== Q: Does OpenMoko run on any other hardware? ===
+=== Q: Does Openmoko run on any other hardware? ===
 
-You can run it on your [[How_to_run_OpenMoko_Apps_on_PC|PC]]. There is work going on with [http://www.datenfreihafen.org/~stefan/weblog//archives/2007/02/#e2007-02-18T15_27_07.txt OpenEZX and HTC]. It's running on [http://dominion.kabel.utwente.nl/koen/cms/openmoko-running-on-an-ipaq iPaq hx4700].
+You can run it on your [[How_to_run_Openmoko_Apps_on_PC|PC]]. There is work going on with [http://www.datenfreihafen.org/~stefan/weblog//archives/2007/02/#e2007-02-18T15_27_07.txt OpenEZX and HTC]. It's running on [http://dominion.kabel.utwente.nl/koen/cms/openmoko-running-on-an-ipaq iPaq hx4700].
 
 ==Neo1973硬件== 
 
@@ -231,7 +231,7 @@ It is currently assumed that the "Hacker's Lunchbox" will contain the [[Debug Bo
 
 === Q: What can we expect in future versions? ===
 
-A: A faster CPU, faster GSM (EDGE?) perhaps even powered USB port, USB2, wifi, and camera. None of the details have been released yet. More details of hardware upgrades should be available sometime in May. There will also be 5 more OpenMoko devices - some not phones in the traditional sense announced by FIC in September.
+A: A faster CPU, faster GSM (EDGE?) perhaps even powered USB port, USB2, wifi, and camera. None of the details have been released yet. More details of hardware upgrades should be available sometime in May. There will also be 5 more Openmoko devices - some not phones in the traditional sense announced by FIC in September.
 
 ==网络/连接==
 
@@ -244,20 +244,20 @@ A: Yes - see [http://gentoo-wiki.com/HOWTO_Configure_a_bluetooth_network_access_
 A: Wikipedia has a list of providers and technologies [http://en.wikipedia.org/wiki/List_of_United_States_mobile_phone_companies here]. A brief look gives the impression that [http://www.t-mobile.com T-Mobile] and [http://www.cingular.com Cingular] (which is
 renaming itself AT&T) seem to be the only major ones.
 
-=== Q: Will OpenMoko "Just Work" with Mac OS X? ===
+=== Q: Will Openmoko "Just Work" with Mac OS X? ===
 
 A: There has been some discussion of this on the mailing list. There is motivation, and there are interested developers. 
 Not being a Mac OS X user, I don't know enough
 to summarize the discussion to answer this question. Can someone please fill in?
 
-A: For IP over USB cable connectivity, it is planned to improve/adapt the AJZaurusUSB driver, allowing ssh into the OpenMoko.
+A: For IP over USB cable connectivity, it is planned to improve/adapt the AJZaurusUSB driver, allowing ssh into the Openmoko.
 
 A: It is expected that (Bluetooth/UB) SyncML based interoperation for
 contacts and events can easily be achieved by a patch
 to the Apple iSync configuration tables.
 
 A: There is an open source implementation of Cocoa (GNUstep) that aims to run MacOS X compatible applications (sort of
-PPC/x86/ARM universal binaries) on OpenMoko devices: mySTEP.
+PPC/x86/ARM universal binaries) on Openmoko devices: mySTEP.
 
 ==其它==
 
@@ -284,7 +284,7 @@ A: 通过搜索MAIL LIST中的文档。例如，用GOOGLE搜索:
 
  site:openmoko.org "release date" "at fic.com.tw"
 
-或者你可以使用 [http://www.google.com/coop/cse?cx=017507431580478583395%3Astsl7lhxzbc custom OpenMoko search engine] 它是用 [http://www.google.com/coop/ Google Co-op] 技术建立的。
+或者你可以使用 [http://www.google.com/coop/cse?cx=017507431580478583395%3Astsl7lhxzbc custom Openmoko search engine] 它是用 [http://www.google.com/coop/ Google Co-op] 技术建立的。
 
 {{Languages|FAQ}}
 
