Replacing 'OpenMoko' with 'Openmoko'

--- a/Finding_hardware_revision.mw
+++ b/Finding_hardware_revision.mw
@@ -4,7 +4,7 @@ You will need to login via [[USB Networking]] or otherwise SSH into your FreeRun
 
 <pre>
 root@om-gta02:~# libgsmd-tool -m shell
-libgsm-tool - (C) 2006-2007 by Harald Welte and OpenMoko, Inc.
+libgsm-tool - (C) 2006-2007 by Harald Welte and Openmoko, Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 rv
