Replacing 'OpenMoko' with 'Openmoko'

--- a/Flashing_NOR.mw
+++ b/Flashing_NOR.mw
@@ -19,7 +19,7 @@ GTA02 A5 DVT1 units (in prototypes page, comes without write protection nor, you
      #
      # flashnor - Flash a file into NOR (M58WR016KB)
      #
-     # Copyright (C) 2008 by OpenMoko, Inc.
+     # Copyright (C) 2008 by Openmoko, Inc.
      # Written by Werner Almesberger <werner@openmoko.org>
      # All Rights Reserved
      #
