--- a/Flashing_Openmoko%2FKnown_good_kernel_flash_dfu-util_output.mw
+++ b/Flashing_Openmoko%2FKnown_good_kernel_flash_dfu-util_output.mw
@@ -1,6 +1,6 @@
 <pre>
 % ./dfu-util --version
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 not implemented yet
@@ -13,7 +13,7 @@ not implemented yet
 
 <pre>
 % sudo ./dfu-util -a 3 -R -D ./uImage-2.6.21.5-r3-fic-gta01.bin
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 Opening USB Device 0x0000:0x0000...
 Claiming USB DFU Runtime Interface...
