--- a/Flashing_the_Neo_1973%2FKnown_good_rootfs_flash_dfu-util_output.mw
+++ b/Flashing_the_Neo_1973%2FKnown_good_rootfs_flash_dfu-util_output.mw
@@ -1,6 +1,6 @@
 <pre>
-% sudo ./dfu-util -a 5 -R -D ./OpenMoko-openmoko-devel-image-glibc-P1-August-Snapshot-20070822-fic-gta01.rootfs.jffs2 
-dfu-util - (C) 2007 by OpenMoko Inc.
+% sudo ./dfu-util -a 5 -R -D ./Openmoko-openmoko-devel-image-glibc-P1-August-Snapshot-20070822-fic-gta01.rootfs.jffs2 
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 Opening USB Device 0x0000:0x0000...Claiming USB DFU Runtime Interface...
