Replacing 'OpenMoko' with 'Openmoko'

--- a/Flashing_the_Neo_1973.mw
+++ b/Flashing_the_Neo_1973.mw
@@ -110,7 +110,7 @@ The u-boot of a GTA01B_v03 (And only of a GTA01B_V03, not for example a GTA01B_v
  ./dfu-util -a u-boot -R -D u-boot-gta01bv3-latest.bin
 
 * The device is now flashed: 
- dfu-util - (C) 2007 by OpenMoko Inc.
+ dfu-util - (C) 2007 by Openmoko Inc.
  This program is Free Software and has ABSOLUTELY NO WARRANTY
  
  Opening USB Device 0x0000:0x0000...
