Replacing 'OpenMoko' with 'Openmoko'

--- a/Forcing_fast_charge_mode.mw
+++ b/Forcing_fast_charge_mode.mw
@@ -4,7 +4,7 @@ This page is intended to consolidate the information about forcing fast charge m
 
 By default, the Neos will only draw 100 mA of power from a USB connection.  
 
-If the Neo recognizes the connection as a "smart" USB connection (by communicating with the host about power availability) or as a standard OpenMoko charger (by recognizing an expected resistance across two of the connectors) then it will switch into 'fast charge mode', drawing 500 mA or 1000 mA.
+If the Neo recognizes the connection as a "smart" USB connection (by communicating with the host about power availability) or as a standard Openmoko charger (by recognizing an expected resistance across two of the connectors) then it will switch into 'fast charge mode', drawing 500 mA or 1000 mA.
 
 If the [[USB charger]] used is not properly signaling the phone its capacity to deliver 500 or 1000 mA, then you may (at your own risk) use this switch to force that mode (more details at http://quickstart.openmoko.org/#chargerdetection).
 
@@ -22,7 +22,7 @@ There are several ways of forcing fast charge mode:
 
 === Neo Freerunner ===
 
-The behaviour is pretty much the same as described above for the Noe 1973. There's also a 1000 mA mode for the OpenMoko-provided wall charger.
+The behaviour is pretty much the same as described above for the Noe 1973. There's also a 1000 mA mode for the Openmoko-provided wall charger.
 
 See :
 [[GTA02_sysfs#.2Fsys.2Fdevices.2Fplatform.2Fs3c2440-i2c.2Fi2c-adapter.2Fi2c-0.2F0-0073.2Fforce_usb_limit_dangerous]] for a description of the "hack" on the register used to control power charge from the FR.
