Replacing 'OpenMoko' with 'Openmoko'

--- a/FreeBSD.mw
+++ b/FreeBSD.mw
@@ -12,7 +12,7 @@ You will need:
 ==== Qemu ====
 To build Qemu on FreeBSD to test and develop FreeBSD on the Neo's:
 # Use subversion to checkout https://svn.openmoko.org/trunk/src/host/qemu-neo1973
-# In gnokiigsm/device.h comment out the declaration for device_read and device_write, see [[Talk:OpenMoko under QEMU#FreeBSD_and_Qemu...]]
+# In gnokiigsm/device.h comment out the declaration for device_read and device_write, see [[Talk:Openmoko under QEMU#FreeBSD_and_Qemu...]]
 # Edit Makefile.target, search for the line LIBS+=-lm and insert "-L/usr/lib" before "-lm"
 # If your running FreeBSD on an AMD64 edit x86_64.ld and remove all occurrences of ONLY_IF_RO and ONLY_IF_RW
 # Run ./configure --target-list=arm-softmmu and gmake
