Replacing 'OpenMoko' with 'Openmoko'

--- a/FreeRunner:_Selected_Blogs_and_Articles.mw
+++ b/FreeRunner:_Selected_Blogs_and_Articles.mw
@@ -15,19 +15,19 @@ Newest on top.
 * Monochrome Mentality [http://monochromementality.com/index.php/blog/show/FSO-Milestone-II-Phot-Safari-and--rant.html FSO Milestone II Photo Safari and rant]
 
 === July 2008 ===
-* technocrat.net (Charles E. Hill) [http://technocrat.net/d/2008/7/27/46753 OpenMoko Neo Freerunner - Part 1]
+* technocrat.net (Charles E. Hill) [http://technocrat.net/d/2008/7/27/46753 Openmoko Neo Freerunner - Part 1]
 * Rabble.ca (Wayne MacPhail) [http://www.rabble.ca/news_full_story.shtml?x=73765 Introducing the anti-iPhone]
 * Canadia Blog [http://bieberphoto.com/canadia/index.php/2008/07/openmoko-neo-freerunner-review/ Neo Freerunner Review]
-* Holden Karau [http://blog.holdenkarau.com/2008/07/unboxing-openmokofreerunner-including.html Unboxing the OpenMoko/FreeRunner including the spares kit, debug board]
-* Dave Fayram [http://www.vimeo.com/1366042 OpenMoko Train Wreck] (video review)
-* Dave Fayram [http://www.vimeo.com/1366923 More OpenMoko Train Wrecking (Now with Qt!)] (video review)
+* Holden Karau [http://blog.holdenkarau.com/2008/07/unboxing-openmokofreerunner-including.html Unboxing the Openmoko/FreeRunner including the spares kit, debug board]
+* Dave Fayram [http://www.vimeo.com/1366042 Openmoko Train Wreck] (video review)
+* Dave Fayram [http://www.vimeo.com/1366923 More Openmoko Train Wrecking (Now with Qt!)] (video review)
 * Wired's Gadget Lab Podcast: [http://blog.wired.com/gadgets/2008/07/gadget-lab-po-1.html Summary] and [http://audio.sonibyte.com/audio/7394.mp3 mp3] (discussion starts at 5:50)
 * jThinks: [http://jthinks.com/index.php/freerunner-at-last/ Freerunner, at last]
-* Holden's Blog: [http://blog.holdenkarau.com/2008/07/unboxing-openmokofreerunner-including.html Unboxing the OpenMoko/FreeRunner including the spares kit, debug board]
-* Wolfmans Howlings: [http://blog.wolfman.com/articles/2008/07/11/openmoko-freerunner-first-impressions OpenMoko Freerunner first impressions]
+* Holden's Blog: [http://blog.holdenkarau.com/2008/07/unboxing-openmokofreerunner-including.html Unboxing the Openmoko/FreeRunner including the spares kit, debug board]
+* Wolfmans Howlings: [http://blog.wolfman.com/articles/2008/07/11/openmoko-freerunner-first-impressions Openmoko Freerunner first impressions]
 * Free Software Foundation (John Sullivan): [http://www.fsf.org/blogs/community/5-reasons-to-avoid-iphone-3g 5 reasons to avoid iPhone 3G]
 * Joseph Reeves: [http://blogs.thehumanjourney.net/finds/entry/20080710 FreeRunner retail unboxing]
-* Ars Technica: [http://arstechnica.com/reviews/os/open-moko-software.ars Ars Technica First Look at OpenMoko]
+* Ars Technica: [http://arstechnica.com/reviews/os/open-moko-software.ars Ars Technica First Look at Openmoko]
 * Juan Lucas Domínguez Rubio: [http://gvsigmobileonopenmoko.wordpress.com/2008/07/02/first-experience-with-openmoko/ First experience with Openmoko]
 * Philipp Kern: [http://www.philkern.de/weblog/en/neo_freerunner.html Neo Freerunner: First impressions]
 
@@ -38,7 +38,7 @@ Newest on top.
 * Kevin Dean: [http://www.monochromementality.com/index.php/blog/show/Day-One-Openmoko-Freerunner.html Day One: Openmoko Freerunner]
 
 ==== Earlier ====
-* Michael Shiloh: [http://gettingstartedopenmoko.wordpress.com/ Getting Started with OpenMoko] (many blog entries in this dedicated blog)
+* Michael Shiloh: [http://gettingstartedopenmoko.wordpress.com/ Getting Started with Openmoko] (many blog entries in this dedicated blog)
 
 
 
