Replacing 'OpenMoko' with 'Openmoko'

--- a/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
+++ b/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
@@ -77,7 +77,7 @@ CME ERROR: 32 is Network not allowed, emergency calls only, might because the ca
 Here is the AT command:
 
 root@om-gta02:~# libgsmd-tool -m atcmd
-libgsm-tool - (C) 2006-2007 by Harald Welte and OpenMoko, Inc.
+libgsm-tool - (C) 2006-2007 by Harald Welte and Openmoko, Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 AT
