Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -124,9 +124,9 @@ While writing a device driver for the new battery which provides an accurate cou
 A bug in the GSM firmware prevents some USA 3G SIM cards from working properly. The bug has been fixed, but the GSM module is under extremely tight legal protection. We've been informed that everything legal has been agreed upon by all parties regarding the process that would allow you to upgrade your own GSM firmware. All that remains is to get everything signed. Apparently the process of getting things signed takes a few weeks! Meanwhile, we have resolved the difficulties I was having performing the upgrade, and I am now able to upgrade your handsets. Anyone interested in having me do this should contact me at michael@openmoko.org.
 
 === SMedia 3362 Documentation & OpenGL ES Drivers ===
-There is an open source kdrive driver being written for the GTA02 which will use hardware to accelerate the XRender extension. While the chip is capable of 3D graphics, no OpenGL ES driver/library is avaliable and OpenMoko developers will not be writing one in the near future (although they have not ruled it out in the long-term). 
+There is an open source kdrive driver being written for the GTA02 which will use hardware to accelerate the XRender extension. While the chip is capable of 3D graphics, no OpenGL ES driver/library is avaliable and Openmoko developers will not be writing one in the near future (although they have not ruled it out in the long-term). 
 
-Documentation for the SMedia 3362 has been promised ([http://lists.openmoko.org/pipermail/community/2007-September/010175.html see this post]). However, this refers to documentation OpenMoko developers will be writing themselves, not the technical documentation SMedia have provided OpenMoko with. The OpenMoko developers had to sign an NDA with SMedia to obtain this documentation and are therefore unable to pass this information on to community developers. (See [http://lists.openmoko.org/pipermail/community/2007-November/011349.html this post] for details)
+Documentation for the SMedia 3362 has been promised ([http://lists.openmoko.org/pipermail/community/2007-September/010175.html see this post]). However, this refers to documentation Openmoko developers will be writing themselves, not the technical documentation SMedia have provided Openmoko with. The Openmoko developers had to sign an NDA with SMedia to obtain this documentation and are therefore unable to pass this information on to community developers. (See [http://lists.openmoko.org/pipermail/community/2007-November/011349.html this post] for details)
 
 === Power Management on the Neo1973/Freerunner===
 The current battery life of the Neo1973 and Freerunner is not satisfactory. A lot of changes seem to be necessary to the kernel, drivers and related user-space applications. Hopefully the situation will improve over time.
